--- a/newspaper/templates/posts.html
+++ b/newspaper/templates/posts.html
@@ -35,6 +35,15 @@ PostsPreview
                    <td style="width: 300px; text-align: left;"> {{ post.title|censor }} </td>
                    <td style="width: 300px; text-align: left;"> {{ post.date_creation }} </td>
                    <td style="width: 600px; text-align: left;"> {{ post.text|censor|truncatewords:20 }} </td>
+                   <td>
+                    {# А здесь доступ для каждой ссылки теперь будем проверять отдельно #}
+                    {% if perms.simpleapp.change_post %}
+                    <a href="{% url 'edit_post' pk=post.id %}">Изменить</a>
+                    {% endif %}
+                    {% if perms.simpleapp.delete_post %}
+                    <a href="{% url 'delete_post' post.id %}">Удалить</a>
+                    {% endif %}
+                </td>
                </tr>
                {% endfor %}
            </tbody>
