--- a/newspaper/templates/403.html
+++ b/newspaper/templates/403.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+ {% load cache %}
+        {% cache 600 head %}
 <head>
    <meta charset="UTF-8">
    <title>Ошибка 403</title>
 </head>
-<body>
+{% endcache %}
+ <body>
    Кажется, у Вас нет доступа к данной странице...
 </body>
 </html>
