--- a/newspaper/templates/subscriptions.html
+++ b/newspaper/templates/subscriptions.html
@@ -1,8 +1,11 @@
 {% extends 'flatpages/default.html' %}
 
+{% load cache %}
+{% cache 60 title %}
 {% block title %}
 Подписки на рассылки
 {% endblock title %}
+{% endcache %}
 
 {% block content %}
     {% for category in categories  %}
